Bug 383236 - "X" button from burning progress window does not work
Summary: "X" button from burning progress window does not work
Status: RESOLVED FIXED
Alias: None
Product: k3b
Classification: Applications
Component: GUI/Usability (other bugs)
Version First Reported In: 17.04.3
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: K3b Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-08-07 14:20 UTC by Patrick Silva
Modified: 2017-11-18 03:28 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2017-08-07 14:20:30 UTC
After burn some project, click on "X" button on top right corner of the burning progress window. Nothing happens.
K3b 17.08 beta on Arch.
Comment 1 Leslie Zhai 2017-08-08 03:02:26 UTC
Git commit 47d665f10651c60869c73a33c5ce3ca3f917d247 by Leslie Zhai.
Committed on 08/08/2017 at 03:01.
Pushed by lesliezhai into branch 'master'.

Fix "X" button from burning progress window does not work issue.

M  +7    -6    src/k3bjobprogressdialog.cpp

https://commits.kde.org/k3b/47d665f10651c60869c73a33c5ce3ca3f917d247
Comment 2 Patrick Silva 2017-08-19 13:46:08 UTC
not fixed in k3b 17.08.
Comment 3 Patrick Silva 2017-11-18 03:28:24 UTC
fixed in 17.12 beta.