Fix "X" button from burning progress window does not work issue.

BUG: 383236